# muon

./: CMakeLists.txt  ChangeLog  Messages.sh  README.PACKAGERS  TODO
discover/: CMakeLists.txt  main.cpp  muon-discover-category.desktop  muon-discover.desktop  org.kde.discover.desktop
discover/muon-contenttheme/: metadata.desktop
discover/qml/: ApplicationPage.qml  ApplicationsListPage.qml  AwesomeGrid.qml  ScrolledAwesomeGrid.qml  SourcesPage.qml
installer/: Application.cpp  ApplicationBackend.cpp  ApplicationBackend.h  ApplicationWindow.cpp  CMakeLists.txt  MainWindow.cpp  main.cpp  muon-installer.desktop
installer/ApplicationDetailsView/: ApplicationDetailsWidget.cpp
installer/ApplicationModel/: ApplicationDelegate.cpp  ApplicationModel.cpp
installer/ResourceDetailsView/: ResourceDetailsWidget.cpp  ResourceDetailsWidget.h
installer/ResourceView/: ResourceDelegate.cpp
installer/ReviewsBackend/: ReviewsBackend.cpp
installer/ReviewsWidget/: ReviewWidget.cpp
kded/: MuonNotifier.cpp  muon-notifier.desktop  muon-notifier.notifyrc
libmuon/: CMakeLists.txt  MuonBackendsFactory.cpp  MuonBackendsFactory.h  MuonMainWindow.cpp  muonbackendplugin.desktop
libmuon/Category/: CategoriesReader.cpp
libmuon/DetailsTabs/: ChangelogTab.cpp  MainTab.cpp
libmuon/PackageModel/: PackageWidget.cpp
libmuon/ReviewsBackend/: ReviewsBackend.cpp  ReviewsBackend.h
libmuon/USCBackend/: USCBackend.h  USCResource.cpp  USCResource.h
libmuon/backends/: CMakeLists.txt
libmuon/backends/AkabeiBackend/: AkabeiBackend.cpp  AkabeiBackend.h  AkabeiNotifier.cpp  AkabeiOrigins.cpp  CMakeLists.txt  muon-akabei-backend.desktop  muonakabeinotifier.desktop
libmuon/backends/ApplicationBackend/: Application.cpp  Application.h  ApplicationBackend.cpp  ApplicationBackend.h  ApplicationOrigins.cpp  ApplicationOrigins.h  ApplicationUpdates.cpp  AppstreamApplication.cpp  AppstreamApplication.h  CMakeLists.txt  OAuthPost.cpp  OAuthPost.h  OAuthSession.cpp  OAuthSession.h  PackageResource.cpp  PackageResource.h  QAptResource.cpp  QAptResource.h  ReviewsBackend.cpp  ReviewsBackend.h  USCResource.cpp  USCResource.h  UbuntuLoginBackend.cpp  UbuntuLoginBackend.h  UbuntuPurchaseDialog.cpp  UbuntuPurchaseDialog.h  UbuntuPurchasePage.cpp  UbuntuPurchasePage.h  muon-applications-backend.desktop  muonapplicationnotifier.desktop  muonapplicationnotifier.notifyrc
libmuon/backends/ApplicationBackend/distupgradeevent/: releasechecker
libmuon/backends/ApplicationBackend/tests/: ApplicationBackendTest.cpp  CMakeLists.txt  testratings.txt
libmuon/backends/BodegaBackend/: muon-bodegawallpapers-backend.desktop
libmuon/backends/ChakraCInstallBackend/: CInstallBackend.cpp  CInstallBackend.h  CInstallResource.cpp  CInstallResource.h  CInstallTransaction.cpp  CInstallTransaction.h  CMakeLists.txt  bundlemodel.cpp  bundlemodel.h  cinstall-categories.xml  muon-cinstall-backend.desktop
libmuon/backends/DummyBackend/: CMakeLists.txt  DummyBackend.cpp  DummyBackend.h  muon-dummy-backend.desktop  muondummynotifier.desktop
libmuon/backends/DummyBackend/tests/: DummyTest.cpp
libmuon/backends/FirefoxApps/: CMakeLists.txt  FirefoxAppsBackend.cpp  FirefoxAppsBackend.h  FirefoxAppsResource.cpp  FirefoxAppsResource.h  firefoxapps-categories.xml  muon-firefoxapps-backend.desktop
libmuon/backends/KNSBackend/: CMakeLists.txt  KNSBackend.cpp  muon-knscomics-backend.desktop  muon-knsplasmoids-backend.desktop
libmuon/backends/KNSBackend/tests/: muon-knscorrect-backend.desktop  muon-knswrong-backend.desktop
libmuon/backends/PackageKitBackend/: CMakeLists.txt  PackageKitBackend.cpp  PackageKitBackend.h  PackageKitResource.cpp  PackageKitResource.h  PackageKitUpdater.cpp  muon-packagekit-backend.desktop  muonpackagekitnotifier.desktop
libmuon/backends/USCBackend/: USCBackend.cpp
libmuon/resources/: AbstractBackendOrigins.cpp  AbstractBackendOrigins.h  AbstractResource.cpp  AbstractResource.h  AbstractResourcesBackend.cpp  AbstractResourcesBackend.h  ResourcesModel.cpp  ResourcesModel.h  ResourcesOriginsModel.cpp  ResourcesOriginsModel.h  muonabstractnotifier.notifyrc
libmuon/settings/: NotifySettingsPage.cpp
libmuonapt/: CMakeLists.txt  QAptActions.cpp
libmuonapt/declarative/: OriginsBackend.cpp
libmuonapt/policies/: apt-add-repository  org.kde.apt-add-repository.policy  org.kde.software-properties.policy  show-software-properties
muon/: MainWindow.cpp  main.cpp  muon.desktop
muon-mobile/: resources.qrc
muon-mobile/qml/: AddonsView.qml  ApplicationOverview.qml  ApplicationPage.qml  ApplicationsList.qml  ApplicationsListPage.qml  Breadcrumbs.qml  CategoryPage.qml  InstallApplicationButton.qml  ListItem.qml  Main.qml  MuonToolButton.qml  ProgressView.qml  RatingAndReviewsConnection.qml  ReviewDialog.qml  ReviewsView.qml  SourcesPage.qml
notifier/: MuonNotifier.desktop
notifier/plasmoid/: metadata.desktop
src/: CMakeLists.txt  DetailsWidget.cpp  DetailsWidget.h  MainWindow.cpp  MainWindow.h  ManagerWidget.cpp  ManagerWidget.h  ReviewWidget.cpp  StatusWidget.cpp  TransactionWidget.cpp  main.cpp  muon.desktop  org.kde.muon.appdata.xml  org.kde.muon.desktop
src/DetailsTabs/: ChangelogTab.cpp  ChangelogTab.h  DependsTab.cpp  DependsTab.h  DetailsTab.cpp  InstalledFilesTab.cpp  InstalledFilesTab.h  MainTab.cpp  MainTab.h  TechnicalDetailsTab.cpp  VersionTab.cpp  VersionTab.h
src/DownloadModel/: DownloadDelegate.cpp  DownloadModel.cpp
src/FilterWidget/: CategoryFilter.cpp  StatusFilter.cpp
src/PackageModel/: PackageDelegate.cpp  PackageModel.cpp  PackageModel.h  PackageProxyModel.cpp  PackageProxyModel.h  PackageView.cpp  PackageView.h  PackageViewHeader.cpp  PackageViewHeader.h  PackageWidget.cpp  PackageWidget.h
src/config/: GeneralSettingsPage.cpp  muon.kcfg
src/icons/: CMakeLists.txt
src/muonapt/: QAptActions.cpp  QAptActions.h
src/muonapt/HistoryView/: HistoryView.cpp
updater/: MainWindow.cpp  UpdaterWidget.cpp  UpdaterWidget.h  UpdaterWindow.cpp  main.cpp  muon-updater.desktop
